test peer-pid via an AF_UNIX socketpair fd instead of reflecting a Socket fd, disable the add-opens-dependent extractFd test